# curlInterface

./: .codecov.yml  .gitignore  .release  .travis.yml  CHANGES  Makefile.am  PackageInfo.g  README.md  autogen.sh  configure.ac  init.g  makedoc.g  read.g
_data/: package.yml
doc/: _AutoDocMainFile.xml  _Chapter_curlInterface_automatic_generated_documentation.xml  chap0.html  chap0.html-e  chap0.txt  chap0_mj.html  chap0_mj.html-e  chap1.html  chap1.html-e  chap1.txt  chap1_mj.html  chap1_mj.html-e  chapInd.html  chapInd.txt  chapInd_mj.html  curlInterface.xml  title.xml
gap/: curl.gd  curl.gi
src/: curl.c
tst/: basic.tst  errors.tst  testall.g
